plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.cheweek'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.7.1'

	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'

	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
	// redis
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.1.0'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.1.0'
	implementation group: 'redis.clients', name: 'jedis', version: '2.8.0'
	implementation group: 'io.lettuce', name: 'lettuce-core', version: '6.2.2.RELEASE'


	implementation group: 'org.json', name: 'json', version: '20230227'

	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.1.4'


	// client
	implementation group: 'org.springframework', name: 'spring-webflux', version: '6.0.12'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
